--- a/mypage/templates/mypage/mypage.html
+++ b/mypage/templates/mypage/mypage.html
@@ -9,18 +9,41 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet"/>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"/>
-        <link rel="stylesheet" type="text/css" href='{% static "mypage.css"%}?after'>
+        <link rel="stylesheet" type="text/css" href='{% static "mypage.css"%}'>
+        <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
         <script src="https://code.jquery.com/jquery-latest.min.js"></script>       
         <script>
           $(document).ready(function() {
+            // 포커스되면 부모태그의 상태가 변함
             var input = $(".allergy-etc")
             input.focus(function () {
                 input.parent().css({'box-shadow':'inset 5px 5px 10px var(--top-shadow),inset -5px -5px 10px var(--bottom-shodow)'});
-                // input.css({'outline':'none'});
             });
             input.blur(function () {
                 input.parent().css({'box-shadow': '5px 5px 10px var(--top-shadow), -5px -5px 10px var(--bottom-shodow)'});
             });
+            
+            // 주소 변경
+            const addr = $("#location");
+            addr.mousedown(function () {
+                addr.parent().css({'box-shadow':'inset 15px 15px 30px var(--top-shadow),inset -15px -15px 30px var(--bottom-shodow)'});
+            });
+            addr.mouseup(function () {
+                addr.parent().css({'box-shadow': '15px 15px 30px var(--top-shadow), -15px -15px 30px var(--bottom-shodow)'});
+            });
+            addr.click(function () {
+                new daum.Postcode({ 
+                oncomplete: function(data) {
+                // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분입니다.
+                    
+                    var address = data.jibunAddress; // 지번 주소      
+                    var dong = data.bname; // 법정동/법정리 이름
+                    addr.val(dong);
+                    }
+                }).open();
+            });
+            
+
           } );
         </script>
     </head>
@@ -46,13 +69,16 @@
                         <div id="none_edit" class="info">{{form.email.value}}</div>
                         <!-- 비밀번호 -->
                         <div id="edit" class="info">
-                            <input type="password" value="{{form.password.value}}" name="password" id="password"/>
+                            <input type="password" value="{{form.password.value}}" name="password" id="password" style="text-align: center;"/>
                         </div>
                         <!-- 닉네임 -->
                         <div id="edit" class="info">
-                            <input type="text" value="{{form.nickname.value}}" name="nickname" id="nickname"/>
+                            <input type="text" value="{{form.nickname.value}}" name="nickname" id="nickname" style="text-align: center;"/>
                         </div>
-                        <div id="edit" class="info">알레르기</div>
+                        <!--  -->
+                        <div id="edit" class="info">
+                            <input type="text" value="{{form.location.value}}" name="location" id="location" style="text-align: center;"/>
+                        </div>
                 </div>
 
                 <div class="content2-wrap">
@@ -74,7 +100,7 @@
                         <ul>
                             <li>
                             <label>
-                                <input type="checkbox" name="allergyinfo" value="달걀">
+                                <input type="checkbox" name="allergyinfo" id="allergyinfo" value="달걀" {{check_boolean.0}}>
                                 <div class="icon-box">
                                     <i class="fa-solid fa-egg"></i>
                                 </div>
@@ -82,7 +108,7 @@
                             </li>
                             <li>
                             <label>
-                                <input type="checkbox" name="allergyinfo" value="우유">
+                                <input type="checkbox" name="allergyinfo" id="allergyinfo" value="우유" {{check_boolean.1}}>
                                 <div class="icon-box">
                                     <img src="{% static 'milk.png' %}" class="icon-img"/>
                                 </div>
@@ -90,7 +116,7 @@
                             </li>
                             <li>
                             <label>
-                                <input type="checkbox" name="allergyinfo" value="땅콩">
+                                <input type="checkbox" name="allergyinfo" id="allergyinfo" value="땅콩" {{check_boolean.2}}>
                                 <div class="icon-box">
                                     <img src="{% static 'peanut.png' %}" class="icon-img"/>
                                 </div>
@@ -98,7 +124,7 @@
                             </li>
                             <li>
                             <label>
-                                <input type="checkbox" name="allergyinfo" value="생선">
+                                <input type="checkbox" name="allergyinfo" id="allergyinfo" value="생선" {{check_boolean.3}}>
                                 <div class="icon-box">
                                     <i class="fa-solid fa-fish"></i>
                                 </div>
@@ -106,7 +132,7 @@
                             </li>
                             <li>
                             <label>
-                                <input type="checkbox" name="allergyinfo" value="갑각류">
+                                <input type="checkbox" name="allergyinfo" id="allergyinfo" value="갑각류" {{check_boolean.4}}>
                                 <div class="icon-box">
                                     <i class="fa-solid fa-shrimp"></i>
                                 </div>
@@ -116,7 +142,7 @@
 
                         <div id="al-etc">
                             <div class="icon-box">
-                                <input class="allergy-etc" type="text" name="allergyinfo" value="{{form.allergyinfo.value}}" style="width: inherit;">
+                                <input class="allergy-etc" type="text" name="allergyinfo" id="allergyinfo" value="{{allergy|join:', '}}">
                             </div>
                         </div>
                     </div>
