컬럼 이름 변경 address

--- a/mypage/templates/mypage/mypage.html
+++ b/mypage/templates/mypage/mypage.html
@@ -77,7 +77,7 @@
                         </div>
                         <!--  -->
                         <div id="edit" class="info">
-                            <input type="text" value="{{form.location.value}}" name="location" id="location" style="text-align: center;"/>
+                            <input type="text" value="{{form.address.value}}" name="address" id="address" style="text-align: center;"/>
                         </div>
                 </div>
 
