--- a/communityboard/templates/communityboard/communityboard_comment.html
+++ b/communityboard/templates/communityboard/communityboard_comment.html
@@ -5,6 +5,7 @@
     </button>
     {{ message }}
 </div>
+{% endfor %}
 
 <br><a href="{% url 'communityboard:communityboard_detail' boardid %}">게시물로돌아가기</a>
 <br>
