--- a/recipeboard/templates/recipeboard/recipeboard_comment.html
+++ b/recipeboard/templates/recipeboard/recipeboard_comment.html
@@ -5,6 +5,7 @@
     </button>
     {{ message }}
 </div>
+{% endfor %}
 
 <br><a href="{% url 'recipeboard:recipeboard_detail' boardid %}">게시물로돌아가기</a>
 <br>
