추천 레시피 기능 구현

--- a/recipe/templates/recipe/show.html
+++ b/recipe/templates/recipe/show.html
@@ -2,15 +2,25 @@
     <h1>show!</h1>
     <hr>
     <h3> 레시피 데이터 </h3>
-    {% for item in data %}
-        <h3>{{ item.id }} / {{ item.name }}/ {{ item.method }} / {{ item.category_1 }} / {{item.igd}}</h3>
+        {% for item in data %}
+            <h3>{{ item.recipe_id }} / {{ item.title }}/ {{ item.method }} / {{ item.category_1 }} / {{item.ingre}}</h3>
+            --------------------------------------------------------------------------------------------------
+        {% endfor %}
+
+        <h3> 유저 데이터 </h3>
+        {% for item in user %}
+            <h3>{{ item.id }} / {{ item.ingre }} </h3>
+           --------------------------------------------------------------------------------------------------
+        {% endfor %}   
+
+        <h3> 추천 레시피 </h3>
+        {% comment %} <h3>{{ test }}  </h3>
+         -------------------------------------------------------------------------------------------------- {% endcomment %}
+        {% comment %} {% for item in test %}
+            <h3> {{ item.name }} / {{ item.ingre }} </h3>
+            --------------------------------------------------------------------------------------------------
+        {% endfor %}  {% endcomment %}
         --------------------------------------------------------------------------------------------------
-    {% endfor %}
-
-    <h3> 유저 데이터 </h3>
-    {% for item in user %}
-    <h3>{{ item.id }} / {{ item.ingre }} </h3>
-    --------------------------------------------------------------------------------------------------
-{% endfor %}
-
+        <h2>{{ test }} </h2>
+          
 </body>
