--- a/recipeboard/templates/recipeboard/recipeboard_index.html
+++ b/recipeboard/templates/recipeboard/recipeboard_index.html
@@ -1,10 +1,19 @@
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
+
 <br>레시피 게시판 입니다.<br>
 
+<main>
 {% comment %} 정렬순서 {% endcomment %}
 {% if kw %}
 {% comment %} 키워드 검색시 정렬기능 없음 {% endcomment %}
 {% else %}
-<div>
+<div class= "container">
     <select id="so-select" onchange="location=this.value">
         {% if so == '' %}
         <option hidden class="so-date" value="/recipeboard">최신순</option>
@@ -24,54 +33,68 @@
 {% endif %}
 
 {% comment %} 글쓰기버튼 {% endcomment %}
-<div>
+<div class="container">
     <a href="{% url 'recipeboard:recipeboard_create' %}">글쓰기</a>
 </div>
 
 {% comment %} 게시물 표시되는곳 {% endcomment %}
-<tr>
-    {% if kw %}
+{% if kw %}
     <br>{{kw}}에 대한 검색결과입니다!<br>
-    {% endif %}
-    <td>-</td>
-    <td>제목</td>
-    <td>작성자</td>
-    <td>조회수</td>
-    <td>추천수</td>
-    <td>작성일</td>
-    <br>
+{% endif %}
+<div class="container">
+<table class="table table-sm">
+    <thead>
+    <tr>
+        <th>#</th>
+        <th>제목</th>
+        <th>작성자</th>
+        <th>날짜</th>
+        <th>조회수</th>
+        <th>추천수</th>
+    </tr>
+    </thead>
+    <tbody>
     {% if board_list %}
         {% for board in board_list%}
-            <td>{{board.boardid}}</a></td>
+        <tr>
+            <td>{{board.boardid}}</td>
             <td><a href="{% url 'recipeboard:recipeboard_detail' board.boardid %}">{{board.title}}</a></td>
-            <td>{{board.name}}</td>
+            <td>{{board.userid.nickname}}</td>
+            {% if board.time.date == today %}
+            <td>{{board.time|time}}</td>
+            {% else %}
+            <td>{{board.time|date}}</td>
+            {% endif %}
             <td>{{board.view}}</td>
             <td>{{board.recommended}}</td>
-            <td>{{board.time}}</td>
-            <br>
+        </tr>
         {% endfor %}
         {% else %}
         <br>표시할 게시물이 없습니다!<br>
     {% endif %}
-</tr>
+    </tbody>
+</table>
+</div>
 
+<div class="container">
 <form action="{% url 'recipeboard:recipeboard_index' %}" method="get">
-    
-    <div class="pagination">
+    <div class="text-center">
+    <ul class="pagination">
         {% if board_list.has_previous %}
-          <a href="?page=1&kw={{kw}}">첫페이지</a>
-          <a href="?page={{board_list.previous_page_number}}&kw={{kw}}">이전페이지</a>
+          <li><a href="?page=1&kw={{kw}}"><<</a></li>
+          <li><a href="?page={{board_list.previous_page_number}}&kw={{kw}}"><</a></li>
         {% endif %}
-    
         <span>{{board_list.number}} / {{board_list.paginator.num_pages}}</span>
-    
         {% if board_list.has_next %}
-          <a href="?page={{board_list.next_page_number}}&kw={{kw}}">다음페이지</a>
-          <a href="?page={{board_list.paginator.num_pages}}&kw={{kw}}">마지막페이지</a>
+          <li><a href="?page={{board_list.next_page_number}}&kw={{kw}}">></a></li>
+          <li><a href="?page={{board_list.paginator.num_pages}}&kw={{kw}}">>></a></li>
         {% endif %}
-      </div>
-
+    </ul>
+    </div>
     <input type="text" name="kw" value="{{ kw }}">
     <input type="submit" value="검색">
-
 </form>
+</div>
+
+</main>
+</html>
