--- a/recipeboard/templates/recipeboard/recipeboard_index.html
+++ b/recipeboard/templates/recipeboard/recipeboard_index.html
@@ -91,8 +91,10 @@
         {% endif %}
     </ul>
     </div>
+    <div>
     <input type="text" name="kw" value="{{ kw }}">
     <input type="submit" value="검색">
+    </div>
 </form>
 </div>
 
