--- a/mypage/templates/mypage/mypage.html
+++ b/mypage/templates/mypage/mypage.html
@@ -24,7 +24,7 @@
             });
             
             // 주소 변경
-            const addr = $("#location");
+            const addr = $("#address");
             addr.mousedown(function () {
                 addr.parent().css({'box-shadow':'inset 15px 15px 30px var(--top-shadow),inset -15px -15px 30px var(--bottom-shodow)'});
             });
