--- a/mypage/templates/mypage/mypage.html
+++ b/mypage/templates/mypage/mypage.html
@@ -42,9 +42,11 @@
                     }
                 }).open();
             });
-            
-
           } );
+
+        //  회원 탈퇴
+        const modal_btn = $("#")
+
         </script>
     </head>
     <body>
@@ -54,7 +56,7 @@
         <form method="POST" class="post-form-info">
             <div>
                 <a for="btn">
-                    <input type="submit" value="수정" class="btn"></input>
+                    <input type="submit" name="update" value="수정" class="btn"></input>
                 </a>
             </div>
 
@@ -148,6 +150,12 @@
                     </div>
                 </div>
             </div>
+
+            <!-- 회원 탈퇴 : 모달 -->
+            <div class="withdrawal">
+                {% include "mypage/withdrawal.html" %}
+            </div>
+            
         </form>
         </div>
     </body>
