--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -9,37 +9,38 @@
          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-         
+         <script src="https://code.jquery.com/jquery-latest.min.js"></script>
          {% load static %}
+         <script src="{% static 'a.js' %}"></script>
          <link rel="stylesheet" href="{% static 'style1.css' %}">
          <html lang = "ko">
-            <head>
-                <meta charset="UTF-8">
-                <title>Signup</title>
-                <link rel = "stylesheet" href = "style1.css">
-                <script src = "jquery-3.4.1.js"></script>
-            </head>         
+         <title>Signup</title>
+           
    
-
 
     
 <body>
-    
      <div class="signup"> 
         <div class="login-form">
-            <form method="POST" >
+            
             {% csrf_token %}
+        <form name="myForm" onsubmit="return fn_validateId()" method="post">
+            {% include "layout.html" %} 
             <div class="login-form">
                     <h1><center>SIGN UP</center></h1>
                     <b><center>EAT VILLAGE</center><b>
                 <div class="int-area">
                     <input name='username' 
+                    id = "username"
                     type="text" 
                     check_result="fail" 
                     autocomplate = "off" required />
                     <label for = "username">ID</label>
+                    
                 </div>
-
+                {% comment %} <p style="text-align:center;">Please enter only English and numbers. (max10)</p> {% endcomment %}
+            
+        
                 <div class="int-area">
                     <input name='email' 
                     type="email" 
@@ -57,120 +58,105 @@
                 </div>
 
                 <div class="int-area">
-                    <input name='password' 
+                    <input name='password'
                     type="password" 
                     check_result="fail" 
+                    minlength = '6'
+                    maxlength = '10' 
                     autocomplate = "off" required />
                     <label for = "password">PASSWORD</label>
                 </div>
 
                 <div class="int-area">
-                    <input name='password1' 
+                    <input name='confirm_password' 
                     type="password" 
                     check_result="fail" 
                     autocomplate = "off" required />
-                    <label for = "password1">CONFIRM PASSWORD</label>
+                    <label for = "confirm_password">CONFIRM PASSWORD</label>             
+                
+                
                 </div>
+
+
+
+
+                <div class="int-area">
+                    <input type="button" onclick="sample6_execDaumPostcode()" check_result="fail" value="Zip Code (click)" autocomplate = "off" required />
+                    <input name = "postcode" type="text" id="postcode" placeholder="POSTCODE"  required />
+                    <input name = "address" type="text" id="address" placeholder="ADDRESS"   required /><br>
+                    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+                    <script>
+                        function sample6_execDaumPostcode() {
+                            new daum.Postcode({
+                                oncomplete: function(data) {
+                                    // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+                                    console.log(data);
+                                    var dong = data.bname       
+                                    // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+                                    // 도로명 주소의 노출 규칙에 따라 주소를 표시한다.
+                                    // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+                                    var roadAddr = data.roadAddress; // 도로명 주소 변수
+                                    var jibunAddr = data.jibunAddress; // 지번 주소 변수
+                                    // 우편번호와 주소 정보를 해당 필드에 넣는다.
+                                    document.getElementById('postcode').value = data.zonecode;
+                                    if(dong !== ''){
+                                        document.getElementById("address").value = dong;
+                                    } 
+                                    else if(dong !== ''){
+                                        document.getElementById("address").value = dong;
+                                    }
+                                }
+                            }).open();
+                        }
+                    </script>
+                    </div>
+
+
+
+
+                <div>
+                    <label for = "ale">ALLERGY</label> <br> 
+                    <input type="checkbox" name="test_list" value="달걀">달걀 
+                    <input type="checkbox" name="test_list" value="우유">우유 
+                    <input type="checkbox" name="test_list" value="견과류">견과류
+                    <input type="checkbox" name="test_list" value="생선">생선 
+                    <input type="checkbox" name="test_list" value="새우">갑각류(새우,게,랍스터) 
+                </div>
+
+                <br>
+                <div>
+                    Enter an allergy that is not in the checkbox.
+                    <br> (If not, please enter none)
+                              
+                </div>
+                <div class="int-area">
+                    <input name='test_list' 
+                    type="text" 
+                    check_result="fail" 
+                    autocomplate = "off" required />
+                    <label for = "test_list">ALLERGY</label>
+                </div>
+
                 <div class="btn-area">
                     <button id="btn" 
-                    value="SIGN UP"
-                    type="submit">SIGN UP</button>    
-            </form>
+                    value="Submit"
+                    type="submit"
+                    onclick="fn_validateId();">SIGN UP</button>    
+                </div>
+
+                
         </div>
     </div>    
-       
+                <script type = "text/javascript">
 
-    </body>
+                    
+                </script>
+
+
+
+
+        </form>
+        </head>  
+        </body>
+
 </html>
-
-
-
-{% comment %} <head>
-        
-    <title>Sign up</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'style1.css' %}">
-<html lang = "ko">
-<head>
-<meta charset="UTF-8">
-<title>Signup</title>
-<link rel = "stylesheet" href = "style1.css">
-<script src = "jquery-3.4.1.js"></script>
-</head>
-<body>
-<section class ="login-form">
-    <h1>EAT VILLAGE</h1>
-    <b><center>SIGN UP</center><b>
-    <form action = "">
-        <div class="int-area">
-            <input type="text" name = "userid" id= "userid"
-            autocomplate = "off" required>
-            <label for = "userid">ID</label>
-        </div>
-        <form action = "">
-            <div class="int-area">
-                <input type="text" name = "user_email" id= "user_email"
-                autocomplate = "off" required>
-                <label for = "user_email">EMAIL</label>
-        </div>
-        <form action = "">
-        <div class ="int-area">
-            <input type="password" name = "user_pw" id = "user_pw"
-            autocomplate = "off" required>
-            <label for="user_pw">PASSWORD</label>
-        </div>
-        <div class ="int-area">
-            <input type="password" name = "user_pw1" id = "user_pw1"
-            autocomplate = "off" required>
-            <label for="user_pw1">CONFIRM PASSWORD: </label>
-        </div>
-        <div style="margin:10px 0; padding:10px; background-color: #ddddd;">
-            [Terms]<br> 1. 약관입니다.
-        </div>
-        AGREEMENT   <input type="checkbox" id = "idcheck"/>
-        <div class="btn-area">
-            <button id="btn" onclick = "registerUser()"
-            type="submit">SIGN UP</button>
-        </div>
-    </form>
-</section>
-
-<script>
-    let id = $('#id');
-    let pw = $('#pw');
-    let btn = $('#btn');
-
-    $(btn).on('click', function(){
-        if($(id).val() =="") {
-            $(id).next('label').addClass('warning');
-            setTimeout(function() {
-                $('label').removeClass('warning');
-            },1500);
-        }
-        else if($(pw).val() == "") {
-            $(pw).next('label').addClass('warning');
-            setTimeout(function(){
-                $('label').removeClass('warning');
-            },1500);
-        }
-    });
-</script>
-</body>  {% endcomment %}
-
-
-
-
-
-
-
-
-
-
-
-
