--- a/users/static/style1.css
+++ b/users/static/style1.css
@@ -1,4 +1,4 @@
-/* 회원가입 */
+/* íšŒì›ê°€ìž… */
 /* bbbbdd */
 @import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
 
@@ -8,9 +8,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    /* background-color: #e4c9fb; */
-    background: url("bg.jpg") no-repeat center;
+    height: 100%;
+    background-color: #e4c9fb; 
+    /*background: url("bg.jpg") no-repeat center;*/
     background-size: cover;
 }
 
@@ -24,10 +24,11 @@ body::before{
 
 .login-form {
     position: relative; z-index: 2;
+    height: 100%;
     
 }
 .login-form h1 {
-    font-size: 34px; color: rgb(255, 255, 255);
+    font-size: 30px; color: rgb(255, 255, 255);
     text-align: center;
     margin-top: 20px;
     font-weight : bold;
@@ -74,7 +75,7 @@ body::before{
     font-size: 13px; color : #166cea;
 }
 
-.btn-area {margin-top : 30px;}
+.btn-area {margin-top : 5px;}
 .btn-area button {
     width: 100%; height: 50px;
     background: #166cea;
@@ -92,4 +93,14 @@ body::before{
 .caption a {
     font-size : 18px; color : #999;
     text-decoration: none;
+}
+
+#messages .error {
+    color:red;
+}
+
+
+.btn btn-primary {
+    width:200px;
+    margin:auto;
 }
