--- a/mainpage/static/common.css
+++ b/mainpage/static/common.css
@@ -13,6 +13,18 @@ a {
     color: white;
 }
 
+.fixed-top {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+}
+
+.content-title {
+    padding-top: 100px;
+}
+
 .navbar {
     display:flex;
     justify-content:space-between;
