peer2peer 연결 전에 streaming 되는 것만 저장
Signed-off-by: heeyori <g00oo00d@naver.com>

--- a/stream/webcam/templates/index.html
+++ b/stream/webcam/templates/index.html
@@ -25,9 +25,11 @@
 
 <div id="container">
     <img src="{% url 'video_feed' %}" alt="">yolov5 </img>
-    <video id="gum-local" autoplay playsinline></video>
+    <!--<video id="gum-local" autoplay playsinline></video>-->
+    <video id="leftVideo" playsinline autoplay controls></video>
     <button id="showVideo">Open camera</button>
-
+    <video id="rightVideo" autoplay playsinline></video>
+    
     <div id="errorMsg"></div>
 
     <p class="warning"><strong>Warning:</strong> if you're not using headphones, pressing play will cause feedback.</p>
