--- a/mainpage/templates/mainpage/recipe_search.html
+++ b/mainpage/templates/mainpage/recipe_search.html
@@ -10,7 +10,7 @@
     <title>Recipe Search Page</title>
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="navbar fixed-top">
         <div class="navbar_logo">
             <a href="{% url 'mainpage:mainpage' %}">
                 <img src="{% static 'logo.png' %}">
