--- a/mainpage/static/common.css
+++ b/mainpage/static/common.css
@@ -13,6 +13,14 @@ a {
     color: white;
 }
 
+.fixed-top {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+}
+
 .navbar {
     display:flex;
     justify-content:space-between;
@@ -21,6 +29,11 @@ a {
     padding: 8px 12px;
     margin-bottom: 50px;
 }
+
+.content-title {
+    padding-top: 100px;
+}
+
 .navbar_logo {
     font-size:24px;
     color: white;
@@ -57,6 +70,11 @@ a {
     width:50px;
     height:25px;
     position:relative;
+    font-size:10px;
+}
+
+#searchfield {
+    height:19px;
 }
 
 .weather {
