--- a/mypage/templates/mypage/mywrite_page.html
+++ b/mypage/templates/mypage/mywrite_page.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load sass_tags %}
 <!-- 베이스 html -->
 <!DOCTYPE html>
 <html lang="ko">
@@ -8,36 +7,38 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="description" content="An example pen showing how a basic CSS Grid container can create a nice, responsive card layout.">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link href="{% sass_src 'css/write.scss' %}" rel="stylesheet" type="text/css" />
-        <title>CSS Grid Cards</title>
+        <link rel="stylesheet" type="text/css" href='{% static "write.css" %}?after'>
+        <script src="https://code.jquery.com/jquery-latest.min.js"></script>       
+        <title>EAT VILLAGE</title>
+        <script>
+            $(document).ready(function() {
+                var idx = $(".card__img");
+                for (let i = 0; i < idx.length; i++) {
+                    const element = $("#"+i);
+                    var tmp = element.attr('src');
+                    if(tmp != ""){
+                        tmp = "../../media/" + tmp;
+                        element.attr('src', tmp);
+                    }  
+                };
+            });
+        </script>
     </head>
-<body>
-        <div class="grid">
-        <div class="grid__item">
-            <div class="card"><img class="card__img" src="https://images.unsplash.com/photo-1519681393784-d120267933ba?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=2250&amp;q=80" alt="Snowy Mountains">
-                <div class="card__content">
-                    <h1 class="card__header">A starry night</h1>
-                    <p class="card__text">Look up at the night sky, and find yourself <strong>immersed</strong> in the amazing mountain range of Aspen. </p><button class="card__btn">Explore <span>&rarr;</span></button>
+    <body>
+            <div class="grid">
+                {% for content in write %}
+                <div class="grid__item">
+                    <div class="card">
+                        <img class="card__img" src="{{content.communityboardimage_set.all.0.image}}" alt="이미지" id="{{forloop.counter0}}"
+                        onerror="this.src='https://images.unsplash.com/photo-1519681393784-d120267933ba?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=2250&amp;q=80'">
+                        <div class="card__content">
+                            <h1 class="card__header">{{content.title}}</h1>
+                            <p class="card__text">{{content.detail}}</p><button class="card__btn">Explore <span>&rarr;</span></button>
+                        </div>
+                    </div>
                 </div>
-            </div>
+                {% endfor %}
         </div>
-        <div class="grid__item">
-            <div class="card"><img class="card__img" src="https://images.unsplash.com/photo-1485160497022-3e09382fb310?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=2250&amp;q=80" alt="Desert">
-                <div class="card__content">
-                    <h1 class="card__header">Misty mornings</h1>
-                    <p class="card__text">Capture the stunning <strong>essence</strong> of the early morning sunrise in the Californian wilderness.</p><button class="card__btn">Explore <span>&rarr;</span></button>
-                </div>
-            </div>
-        </div>
-        <div class="grid__item">
-            <div class="card"><img class="card__img" src="https://images.unsplash.com/photo-1506318164473-2dfd3ede3623?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=3300&amp;q=80" alt="Canyons">
-                <div class="card__content">
-                    <h1 class="card__header">Utah sunsets</h1>
-                    <p class="card__text">Sunsets over the <strong>stunning</strong> Utah Canyonlands, is truly something much more than incredible.</p><button class="card__btn">Explore <span>&rarr;</span></button>
-                </div>
-            </div>
-        </div>
-    </div>
-</body>
+    </body>
 
 </html>
