--- a/users/templates/back.html
+++ b/users/templates/back.html
@@ -9,7 +9,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
         
         {% load static %}
-        <link rel="stylesheet" href="{% static "style3.css" %}">
+        <link rel="stylesheet" href="{% static 'style3.css %'}">
 
 </head>
 <body>
@@ -17,7 +17,7 @@
       
          <div class="account-login">
             
-            <form method="post" class="login-form" action="{% url 'member:login' %}">
+            <form method="post" class="login-form" action="{% url 'users:login' %}">
                <h1><center>EAT VILLAGE</h1>
                <br>
                <br> <br>
