--- a/recipeboard/templates/recipeboard/recipeboard_comment.html
+++ b/recipeboard/templates/recipeboard/recipeboard_comment.html
@@ -1,3 +1,31 @@
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=0.7">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
+    <!-- custom CSS -->
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style-detail.css' %}?after">
+
+    <!-- Font -->
+    <link rel="stylesheet" type="text/css"
+          href="https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+
+    <!-- Icons -->
+    <script src="https://kit.fontawesome.com/22dc6176d9.js" crossorigin="anonymous"></script>
+</head>
+
+<main>
+
 {% for message in messages %}
 <div class="alert {{ message.tags }} alert-auto-dismissible alert-dismissible notification-container text-center" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -7,28 +35,54 @@
 </div>
 {% endfor %}
 
-<br><a href="{% url 'recipeboard:recipeboard_detail' boardid %}">게시물로돌아가기</a>
-<br>
+<div class="container">
+<hr>
+    <a href="{% url 'recipeboard:recipeboard_detail' boardid %}"><i class="fa-solid fa-arrow-left fa-2x"></i></a>
+<hr>
 
-<td>{{comment.userid.nickname}}</td>
-<td>{{comment.detail}}</td>
-<td>{{comment.time}}</td>
-<br>
-<br>대댓글
-<br>
-{% for babycomment in babycomment %}
-    {% if babycomment.parentcommentid == comment.commentid %}
-    <td>{{babycomment.userid.nickname}}</td>
-    <td>{{babycomment.detail}}</td>
-    <td>{{babycomment.time}}</td>
-    <td>
-        {% if babycomment.detail != "삭제된 댓글입니다." %}
-        <a href="{% url 'recipeboard:recipecomment_delete' babycomment.commentid %}">댓글삭제하기</a>
+    <div class="comment1">
+        <div class="comment1-1">
+            {{comment.userid.nickname}}
+        </div>
+        <div class="comment1-2">
+            {% comment %} <span><a href="{% url 'recipeboard:recipeboard_comment' board.boardid comment.commentid %}"><i class="fa-solid fa-message"></i></a></span> {% endcomment %}
+            <span>
+            {% if comment.userid == user and comment.detail != "삭제된 댓글입니다." %}
+                <a href="{% url 'recipeboard:recipecomment_delete' comment.commentid %}"><i class="fa-solid fa-x"></i></a>
+            {% endif %}
+            </span>
+        </div>
+    </div>
+    <div class="comment2">
+        {{comment.detail}}
+    </div>
+    <div class="comment3">
+        {{comment.time|date:"Y-m-d H:i:s"}}
+    </div>
+    <hr>
+    {% for babycomment in babycomment %}
+        {% if babycomment.parentcommentid == comment.commentid %}
+        <div class="bcomment1">
+            <div class="bcomment1-1">
+                <span>{{babycomment.userid.nickname}}</span>
+            </div>
+            <div class="bcomment1-2">
+                <span>
+                    {% if babycomment.userid == user and babycomment.detail != "삭제된 댓글입니다." %}
+                    <a href="{% url 'recipeboard:recipecomment_delete' comment.commentid %}"><i class="fa-solid fa-x"></i></a>
+                    {% endif %}
+                </span>
+            </div>
+        </div>
+        <div class="bcomment2">
+            <span>{{babycomment.detail}}</span>
+        </div>
+        <div class="bcomment3">
+            <span id>{{babycomment.time|date:"Y-m-d H:i:s"}}</span>
+        </div>
+        <hr>
         {% endif %}
-    </td>
-    <br>
-    {% endif %}
-{% endfor %}
+    {% endfor %}
 
 <div class="container">
     <form method="post" action="">
@@ -37,3 +91,6 @@
         <td><input type="submit" value="작성완료", name='comment'></td>
     </form>
 </div>
+
+</div>
+</main>
