--- a/mypage/templates/mypage/withdrawal.html
+++ b/mypage/templates/mypage/withdrawal.html
@@ -1,59 +1,52 @@
 {% load static %}
-<link rel="stylesheet" type="text/css" href='{% static "withdrawal.css"%}'>
+<link rel="stylesheet" type="text/css" href='{% static "withdrawal.css"%}?after'>
 <div id="add_feed">탈퇴하기</div>
 <div id="model_add_feed" class="modal_overlay">
     <div class="modal_window">
-        <span id="close_btn">X</span>
         <div class="container">
-            <div style="margin-top: 5rem !important;">
-                <div class="col-12">
-        
-                    <div class="row justify-content-center">
-                        <div class="card">
-                            <div class="card-header" style="padding-bottom:8px;">
-                                <strong style="font-size: 18px;"><i class="fas fa-user-slash"></i>&nbsp;&nbsp;회원탈퇴</strong>
+            <div class="row justify-content-center">
+                <div class="card">
+                    <div class="card-header">
+                        <strong style="font-size: 18px;"><i class="fas fa-user-slash"></i>&nbsp;&nbsp;회원탈퇴</strong>
+                    </div>
+                    <div class="card-body">
+                        <form method="POST" novalidate>
+                            {% csrf_token %}
+                            <p>EAT VILLAGE 에서 <strong>{{ form.first_name.value }}</strong> 회원님의 계정이 삭제됩니다.<br>
+                                탈퇴시 개인정보가 삭제되며 복구할 수 없고 게시글은 자동 삭제되지 않습니다. <br>
+                                본인의 비밀번호를 입력한 후 하단의 유의사항 동의에 체크하세요.
+                            </p>
+                            <div class="mb-4 md-form">
+                                <div>
+                                    <small class="form-text text-muted">
+                                        아래의 문장을 똑같이 입력해주세요
+                                    </small><br>
+                                    <span>흙에서 자란 내 마음 파아란 하늘빛</span>
+                                </div>
+                                <input type="text" name="sentence" class="form-control" required id="id_sentence">
+                                <small id="check_warning">문장이 일치하지 않습니다.</small>
                             </div>
-                            <div class="card-body">
-                                <form method="POST" novalidate>
-                                    {% csrf_token %}
-                                    <p>웹사이트에서 <strong>{{ user.user_id }}</strong> 회원님의 계정이 삭제됩니다.<br>탈퇴시 개인정보가 삭제되며 복구할 수 없고 게시글은 자동 삭제되지 않습니다. <br>본인의 비밀번호를 입력한 후 하단의 유의사항 동의에 체크하세요.</p>
-                                    <div class="mb-4 md-form">
-                                        <label name="label_password" for="{{ password_form.password.id_for_label }}"><i
-                                                class="fas fa-lock"></i>&nbsp;&nbsp;{{ password_form.password.label }}</label>
-                                        {{ password_form.password }}
-                                        {% if password_form.password.errors %}
-                                        <script type="text/javascript">
-                                            document.getElementsByName('password')[0].setAttribute('class',
-                                                'form-control is-invalid')
-                                        </script>
-                                        {% for error in password_form.password.errors %}
-                                        <div class="invalid-feedback" style="margin-bottom:-10px;">
-                                            {{ error }}
-                                        </div>
-                                        {% endfor %}
-                                        {% endif %}
-                                        <small style="margin-left: 4px; margin-top:8px; margin-bottom: 30px;" class="form-text text-muted">
-                                            본인인증을 위해 비밀번호를 입력해주세요.
-                                        </small>
-                                    </div>
+
+                            <label>
+                                <input type="checkbox" name="ck" onClick="checkDisable(this.form)">
+                                <span style="color:#d14040f2; font-weight: bold;"> 유의사항 동의</span>
+                            </label>
+                            <p style="color:gray; margin-bottom: 4px;"><i class="fas fa-exclamation-triangle"></i>&nbsp;{{ form.username.value }} 계정이 삭제됩니다.</p>
+                            <div>
+                                <a class="btn btn-sm" id="back_btn"><i class="fa fa-reply"></i>&nbsp;돌아가기</a>
+    
+                                <button type="submit" class="btn btn-sm" name="bt_delete" id="detail_btn" disabled="true" >
+                                    <i class="fas fa-check"></i>&nbsp;탈퇴하기
+                                </button>
         
-                                    <label>
-                                        <input type="checkbox" name="ck" onClick="checkDisable(this.form)">
-                                        <span style="color:#d14040f2; font-weight: bold;">유의사항 동의</span>
-                                    </label>
-                                    <!-- <input class="btn btn-danger" type="submit" name="bt" value="탈퇴하기" disabled="true" /> -->
-        
-                                    <div style="text-align: center; margin-bottom:-15px;">
-                                        <p style="color:gray; margin-bottom: 4px;"><i class="fas fa-exclamation-triangle"></i>&nbsp;{{ user.user_id }} 계정이 삭제됩니다.</p>
-                                        <button type="submit" class="btn btn-sm" name="bt_delete" id="detail_btn" disabled="true" ><i class="fas fa-check"></i>&nbsp;탈퇴하기</button>
-                                    </div>
-                                </form>
                             </div>
-                        </div>
+                        </form>
+                        
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 </div>
 <script>
     const btn = document.getElementById("add_feed");
@@ -62,16 +55,44 @@
         addModal.style.display = 'flex';
     });
 
-    const closeBtn = document.getElementById("close_btn");
+    const closeBtn = document.getElementById("back_btn");
     closeBtn.addEventListener("click", e => {
-        addModal.style.display = "none"
-    })
+        addModal.style.display = "none";
+    });
+    
+    const sentence = '흙에서 자란 내 마음 파아란 하늘빛';
+    var oldVal = '';
+    var currentVal = '';
+    $("#id_sentence").on("propertychange change keyup paste input", function() {
+        try {
+            currentVal = $(this).val();
+            if(currentVal == oldVal && sentence == currentVal) {
+                // warning.style.color = 'blue';
+                $("#check_warning").css('color', 'blue');
+                // warning.innerText = '문장이 일치합니다.';
+                $("#check_warning").text('문장이 일치합니다.');
+
+                return;
+            }
+            else{
+                $("#check_warning").css('color', 'red');
+                // warning.innerText = '문장이 일치합니다.';
+                $("#check_warning").text('문장이 일치하지 않습니다.');
+            }
+            oldVal = currentVal;
+        } catch (error) {
+            console.log(error)
+        }
+        
+    });
 
     function checkDisable(form) {
-        if (form.ck.checked == true) {
-            form.bt.disabled = false;
+        if (form.ck.checked == true && sentence == currentVal) {
+            form.bt_delete.disabled = false;
         } else {
-            form.bt.disabled = true;
+            form.bt_delete.disabled = true;
         }
-    }
+    };
+
+    
 </script>
