--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -9,7 +9,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
         
         {% load static %}
-        <link rel="stylesheet" href="{% static "style3.css" %}">
+        <link rel="stylesheet" href="{% static 'style3.css' %}">
 
 </head>
 <body>
